# robot_shooter

./: Dockerfile  docker-compose.yml  installation-step.md
ros2_ws/install/robot_shooter/lib/robot_shooter/: camera_capture  first_node  image_pub  image_sub  listener  sender  target_deleter
ros2_ws/install/robot_shooter/share/robot_shooter/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/robot_shooter/share/robot_shooter/config/: shooter_controllers.yaml
ros2_ws/install/robot_shooter/share/robot_shooter/meshes/: barrel2.stl  robot.stl
ros2_ws/install/robot_shooter/share/robot_shooter/model/: model.config
ros2_ws/install/robot_shooter/share/robot_shooter/urdf/: shooter_robot.urdf.xacro
ros2_ws/log/: latest_build
ros2_ws/src/robot_shooter/: setup.cfg  setup.py
ros2_ws/src/robot_shooter/launch/: gazebo_cl.launch.py  gazebo_env.launch.py  gazebo_ign.launch.py  spawn_target.launch.py  spawn_turret.launch.py
ros2_ws/src/robot_shooter/meshes/: ANOMAN.dae  DURNA.dae  PETRUK.dae  barrel.stl  patok_wayang2_durna.dae  target_wayang.dae
ros2_ws/src/robot_shooter/model/patok_anoman/: model.config  model.sdf
ros2_ws/src/robot_shooter/robot_shooter/: camera_capture.py  image_pub.py  image_sub.py  sift.py  target_deleter.py  test_publish.py  test_subscribe.py
ros2_ws/src/robot_shooter/rviz/: rviz.rviz  turret_config.rviz
ros2_ws/src/robot_shooter/urdf/: shooter_robot.urdf.xacro  turret.urdf.xacro
ros2_ws/src/robot_shooter/worlds/: shooter_world.sdf  shooter_world.world
(+15 files in other folders)
