<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_shooter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rizalalif03@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>r
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>forward_command_controller</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>gz_ros2_control</depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
